fix: Resolve CI/CD failures
- Fix http-client type inference by explicitly typing withRetry/withErrorHandling
- Add build step to CI before type-check (required for composite projects)
- All TypeScript errors should now be resolved

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
 
       - run: pnpm --filter @evergreen/supabase-client prisma generate
 
+      - run: pnpm build
+
       - run: pnpm type-check
 
       - run: pnpm lint
