fix: Resolve remaining CI/CD issues
- Fix implicit any type in mem0-client SingletonClientManager
- Improve CI workflow with named steps
- All type errors should now be resolved

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,9 +26,11 @@ jobs:
 
       - run: pnpm --filter @evergreen/supabase-client prisma generate
 
-      - run: pnpm build
+      - name: Build packages (required for composite TypeScript projects)
+        run: pnpm build
 
-      - run: pnpm type-check
+      - name: Type check
+        run: pnpm type-check
 
       - run: pnpm lint
 
